# hero_bridge

./: .deploy_key.enc  .travis.yml  CMakeLists.txt  README.md  package.xml
.github/workflows/: main.yml
launch/: arm_bridge.launch  hero_bridge.launch  manipulation_bridge.launch
src/gripper_controller/: gripper_controller.py
src/handover_node/: handover_detection.py
src/head_controller/: head_controller.py
src/hmi_server_julius_client/: hmi_server_julius_client.py
src/lights/: light_bridge.py
src/plan_node/: manipulation_bridge.py
src/speech_node/: speech.py
src/tf_ghost/: tf_ghost.py
src/traj_planner_node/: joint_trajectory.py  joint_trajectory_topic.py
test/: test_manipulation_bridge.py  test_pickup.py
