<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hero_bridge</name>
  <version>0.0.0</version>
  <description>bridge functions between the Tu/e software and the toyota software for hero the hsr robot</description>

  <maintainer email="p.v.dooren@student.tue.nl">Peter van Dooren</maintainer>
  <maintainer email="j.geijsberts@student.tue.nl">Josja Geijsberts</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>control_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>text_to_speech</build_depend>
  <build_depend>tmc_msgs</build_depend>
  <build_depend>tue_manipulation_msgs</build_depend>
  <build_depend>tue_msgs</build_depend>
  
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>text_to_speech</exec_depend>
  <exec_depend>tmc_msgs</exec_depend>
  <exec_depend>tue_manipulation_msgs</exec_depend>
  <exec_depend>tue_msgs</exec_depend>

</package>
