<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hero_bridge</name>
  <version>0.0.0</version>
  <description>bridge functions between the Tu/e software and the toyota software for hero the hsr robot</description>

  <maintainer email="p.v.dooren@student.tue.nl">Peter van Dooren</maintainer>
  <maintainer email="j.geijsberts@student.tue.nl">Josja Geijsberts</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>text_to_speech</depend>
  <depend>tf_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tmc_msgs</depend>
  <depend>tue_manipulation_msgs</depend>
  <depend>tue_msgs</depend>

  <exec_depend>sox</exec_depend>
  <exec_depend>libsox-fmt-mp3</exec_depend>

</package>
